--- a/docs/static/css/atomic-package-docs.css
+++ b/docs/static/css/atomic-package-docs.css
@@ -39,6 +39,16 @@
   text-align: right;
 }
 
+/* Title Style
+-------------------------------------------------- */
+.title.article.sub {
+  margin: 15px 0;
+  padding-left: 6px;
+  border-left: 3px solid #1FA2D6;
+  font-size: 16px;
+  line-height: 16px;
+}
+
 /* Navigation & Menu Style
 -------------------------------------------------- */
 .sideMenu.docs.docs {
@@ -69,13 +79,19 @@
 }
 
 .contents.docs > h2 {
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   font-size: 36px;
   line-height: 42px;
 }
 
 .contents.docs > h3 {
-  margin-bottom: 10px;
+  margin: 20px 0;
+  font-size: 30px;
+  line-height: 1.5;
+}
+
+.contents.docs > h4 {
+  margin: 20px 0;
   font-size: 24px;
   line-height: 1.5;
 }
@@ -83,6 +99,17 @@
 .contents.docs > p {
   margin-bottom: 10px;
   line-height: 1.6;
+}
+
+.contents.docs > pre {
+  margin-bottom: 20px;
+}
+
+/*
+ * Box
+*/
+.box.article.example {
+  margin: 25px 0;
 }
 
 /* List Style
