--- a/docs/static/css/atomic-package.css
+++ b/docs/static/css/atomic-package.css
@@ -177,6 +177,18 @@ a {
   background: #fafafa;
 }
 
+pre {
+  padding: 10px;
+  background: #fafafa;
+  font: 12px/18px Consolas,monospace,serif;
+  color: #666;
+  -moz-tab-size: 4;
+  tab-size: 4;
+  overflow: auto;
+  border: 1px solid #E5E5E5;
+  border-radius: 3px;
+}
+
 /* Paragraph style
 -------------------------------------------------- */
 /*
