--- a/scss/atomic-package-docs/_parts.scss
+++ b/scss/atomic-package-docs/_parts.scss
@@ -34,10 +34,10 @@
 -------------------------------------------------- */
 @import "parts/paragraph";
 
-///* Title Style
-//-------------------------------------------------- */
-//@import "parts/title";
-//
+/* Title Style
+-------------------------------------------------- */
+@import "parts/title";
+
 /* Navigation & Menu Style
 -------------------------------------------------- */
 @import "parts/navigation_menu";
