--- a/docs/layouts/partials/header_docs.html
+++ b/docs/layouts/partials/header_docs.html
@@ -5,11 +5,11 @@
 
   {{ partial "meta.html" . }}
 
-  <base href="{{ .Site.BaseURL }}">
+  <!--<base href="{{ .Site.BaseURL }}">-->
   <title>{{ .Title }} - Atomic Package</title>
   <link rel="canonical" href="{{ .Permalink }}">
   {{ if .RSSlink }}
-  <link href="{{ .RSSlink }}" rel="alternate" type="application/rss+xml" title="{{ .Title }}"/>
+  <!--<link href="{{ .RSSlink }}" rel="alternate" type="application/rss+xml" title="{{ .Title }}"/>-->
   {{ end }}
 
   {{ partial "head_includes.html" . }}
