--- a/scss/atomic-package/parts/_navigation_menu.scss
+++ b/scss/atomic-package/parts/_navigation_menu.scss
@@ -33,14 +33,35 @@
 /*
  * Pagination
 */
+// size (width)
+$paginationNarrow: 20px;
+$paginationShort: 30px;
+$paginationLong: 80px;
+$paginationWide: 160px;
+
+// size (height)
+$paginationLower: 20px;
+$paginationLow: 30px;
+$paginationHigh: 80px;
+$paginationLofty: 160px;
+
+// size (width x height)
+$paginationMini: 20px;
+$paginationSmall: 30px;
+$paginationLarge: 50px;
+$paginationBig: 60px;
+
+// size (font)
+$paginationMiniFont: 10px;
+$paginationSmallFont: 12px;
+$paginationBigFont: 16px;
+
 .paginationList {
   > li {
     display: inline-block;
     min-width: 40px;
     min-height: 40px;
-    border: #EAEAEA 1px solid;
     border-radius: 4px;
-    background: $colorDefault;
     box-sizing: border-box;
     vertical-align: top;
 
@@ -61,10 +82,8 @@
 
     &.active,
     &:hover {
-      border-color: #30699B;
-      background: $colorBlue;
       a {
-        color: #fff;
+        color: #337AB7;
       }
     }
 
@@ -72,118 +91,235 @@
     &:not(:last-child) {
       margin: 0 4px;
     }
+
+    // state size (height)
+    &.narrow {
+      min-width: $paginationNarrow;
+      a {
+        min-width: $paginationNarrow;
+      }
+    }
+    &.short {
+      min-width: $paginationShort;
+      a {
+        min-width: $paginationShort;
+      }
+    }
+    &.long {
+      min-width: $paginationLong;
+      a {
+        min-width: $paginationLong;
+      }
+    }
+    &.wide {
+      min-width: $paginationWide;
+      a {
+        min-width: $paginationWide;
+      }
+    }
+
+    // state size (height)
+    &.lower {
+      min-height: $paginationLower;
+      a {
+        min-height: $paginationLower;
+        line-height: $paginationLower;
+      }
+    }
+    &.low {
+      min-height: $paginationLow;
+      a {
+        min-height: $paginationLow;
+        line-height: $paginationLow;
+      }
+    }
+    &.high {
+      min-height: $paginationHigh;
+      a {
+        min-height: $paginationHigh;
+        line-height: $paginationHigh;
+      }
+    }
+    &.lofty {
+      min-height: $paginationLofty;
+      a {
+        min-height: $paginationLofty;
+        line-height: $paginationLofty;
+      }
+    }
+
+    // state size
+    &.mini {
+      min-width: $paginationMini;
+      min-height: $paginationMini;
+      a {
+        min-width: $paginationMini;
+        min-height: $paginationMini;
+        line-height: $paginationMini;
+        font-size: $paginationMiniFont;
+      }
+    }
+    &.small {
+      min-width: $paginationSmall;
+      min-height: $paginationSmall;
+      a {
+        min-width: $paginationSmall;
+        min-height: $paginationSmall;
+        line-height: $paginationSmall;
+        font-size: $paginationSmallFont;
+      }
+    }
+    &.large {
+      min-width: $paginationLarge;
+      min-height: $paginationLarge;
+      a {
+        min-width: $paginationLarge;
+        min-height: $paginationLarge;
+        line-height: $paginationLarge;
+      }
+    }
+    &.big {
+      min-width: $paginationBig;
+      min-height: $paginationBig;
+      a {
+        min-width: $paginationBig;
+        min-height: $paginationBig;
+        line-height: $paginationBig;
+        font-size: $paginationBigFont;
+      }
+    }
   }
 
-  // skin
-  &.primary > li {
-    border-color: $colorBorderPrimary;
-    background: $colorPrimary;
-    a {
-      color: #fff;
-    }
-    &.active,
-    &:hover {
-      border-color: $colorBorderPrimary;
-      background: $colorHoverPrimary;
-    }
-  }
-  &.green > li {
-    border-color: $colorBorderGreen;
-    background: $colorGreen;
-    a {
-      color: #fff;
-    }
-    &.active,
-    &:hover {
-      border-color: $colorBorderGreen;
-      background: $colorHoverGreen;
-    }
-  }
-  &.blue > li {
-    border-color: $colorBorderBlue;
-    background: $colorBlue;
-    a {
-      color: #fff;
-    }
-    &.active,
-    &:hover {
-      border-color: $colorBorderBlue;
-      background: $colorHoverBlue;
-    }
-  }
-  &.orange > li {
-    border-color: $colorBorderOrange;
-    background: $colorOrange;
-    a {
-      color: #fff;
-    }
-    &.active,
-    &:hover {
-      border-color: $colorBorderOrange;
-      background: $colorHoverOrange;
-    }
-  }
-  &.red > li {
-    border-color: $colorBorderRed;
-    background: $colorRed;
-    a {
-      color: #fff;
-    }
-    &.active,
-    &:hover {
-      border-color: $colorBorderRed;
-      background: $colorHoverRed;
-    }
-  }
-
-  // state
+  // state size
   &.mini {
     > li {
-      min-width: 20px;
-      min-height: 20px;
+      min-width: $paginationMini;
+      min-height: $paginationMini;
       a {
-        min-width: 20px;
-        min-height: 20px;
-        line-height: 20px;
-        font-size: 10px;
+        min-width: $paginationMini;
+        min-height: $paginationMini;
+        line-height: $paginationMini;
+        font-size: $paginationMiniFont;
       }
     }
   }
   &.small {
     > li {
-      min-width: 30px;
-      min-height: 30px;
+      min-width: $paginationSmall;
+      min-height: $paginationSmall;
       a {
-        min-width: 30px;
-        min-height: 30px;
-        line-height: 30px;
-        font-size: 12px;
+        min-width: $paginationSmall;
+        min-height: $paginationSmall;
+        line-height: $paginationSmall;
+        font-size: $paginationSmallFont;
       }
     }
   }
   &.large {
     > li {
-      min-width: 40px;
-      min-height: 40px;
+      min-width: $paginationLarge;
+      min-height: $paginationLarge;
       a {
-        min-width: 40px;
-        min-height: 40px;
-        line-height: 40px;
+        min-width: $paginationLarge;
+        min-height: $paginationLarge;
+        line-height: $paginationLarge;
       }
     }
   }
   &.big {
     > li {
-      min-width: 50px;
-      min-height: 50px;
+      min-width: $paginationBig;
+      min-height: $paginationBig;
       a {
-        min-width: 50px;
-        min-height: 50px;
-        line-height: 50px;
-        font-size: 16px;
+        min-width: $paginationBig;
+        min-height: $paginationBig;
+        line-height: $paginationBig;
+        font-size: $paginationBigFont;
       }
     }
   }
+
+  // skin Square
+  &.square {
+    > li {
+      border: #EAEAEA 1px solid;
+      background: $colorDefault;
+
+      &.active,
+      &:hover {
+        border-color: #30699B;
+        background: $colorBlue;
+        a {
+          color: #fff;
+        }
+      }
+    }
+
+    // skin
+    &.primary > li {
+      border-color: $colorBorderPrimary;
+      background: $colorPrimary;
+      a {
+        color: #fff;
+      }
+      &.active,
+      &:hover {
+        border-color: $colorBorderPrimary;
+        background: $colorHoverPrimary;
+      }
+    }
+    &.green > li {
+      border-color: $colorBorderGreen;
+      background: $colorGreen;
+      a {
+        color: #fff;
+      }
+      &.active,
+      &:hover {
+        border-color: $colorBorderGreen;
+        background: $colorHoverGreen;
+      }
+    }
+    &.blue > li {
+      border-color: $colorBorderBlue;
+      background: $colorBlue;
+      a {
+        color: #fff;
+      }
+      &.active,
+      &:hover {
+        border-color: $colorBorderBlue;
+        background: $colorHoverBlue;
+      }
+    }
+    &.orange > li {
+      border-color: $colorBorderOrange;
+      background: $colorOrange;
+      a {
+        color: #fff;
+      }
+      &.active,
+      &:hover {
+        border-color: $colorBorderOrange;
+        background: $colorHoverOrange;
+      }
+    }
+    &.red > li {
+      border-color: $colorBorderRed;
+      background: $colorRed;
+      a {
+        color: #fff;
+      }
+      &.active,
+      &:hover {
+        border-color: $colorBorderRed;
+        background: $colorHoverRed;
+      }
+    }
+
+  }
+
+
 }
 
 /*
