--- a/docs/static/css/atomic-package-docs.css
+++ b/docs/static/css/atomic-package-docs.css
@@ -135,6 +135,20 @@
   color: #fff;
 }
 
+.docsIconList {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+
+.docsIconList li {
+  width: 200px;
+  margin-right: 15px;
+  margin-bottom: 15px;
+}
+
 #top .topView {
   margin-bottom: 120px;
 }
