--- a/scss/atomic-package/base/_setting.scss
+++ b/scss/atomic-package/base/_setting.scss
@@ -33,7 +33,7 @@ $colorHoverRed: #EF8B80;
 
 /* font */
 $fontMainColor: #3D3D3D;
-$linkMainColor: #1397E1;
+$linkMainColor: #3598DB;
 
 /*
  * Font Variables
